# instant-neural-volume

./: .gitignore  .gitmodules  CMakeLists.txt
dependencies/nifti_clib/: CMakeLists.txt
include/neural-graphics-primitives/: common.h  testbed.h
src/: common_host.cu  testbed.cu  testbed_nifti.cu
